--- a/index.html
+++ b/index.html
@@ -61,3 +61,41 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- HEADER AD (desktop only) -->
+<div class="ad ad-header">
+  <p>Advertisement</p>
+  <div class="ad-box">728x90 Banner</div>
+</div>
+
+<section class="hero" id="home" aria-label="Hero">
+  ...
+</section>
+
+<main class="container with-sidebar">
+  <section id="map-section">
+    <h2 id="map">Interactive Map</h2>
+    <div id="mapEl"></div>
+  </section>
+
+  <aside class="ad ad-sidebar">
+    <p>Advertisement</p>
+    <div class="ad-box">300x250 Ad</div>
+  </aside>
+
+  <section id="courses-section">
+    <h2 id="courses">Featured Courses</h2>
+    <!-- Example inline ad card -->
+    <article class="card ad-card">
+      <div class="card-body">
+        <p><strong>Advertisement</strong></p>
+        <div class="ad-box">Responsive Ad Slot</div>
+      </div>
+    </article>
+    <div id="coursesGrid" class="grid"></div>
+  </section>
+</main>
+
+<!-- FOOTER AD (mobile sticky) -->
+<div class="ad ad-footer">
+  <div class="ad-box">320x50 Mobile Banner</div>
+</div>
