--- a/course.html
+++ b/course.html
@@ -3,21 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Course Details</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Course Details - UK Golf Directory</title>
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
   <header>
-    <h1 id="course-name">Course Name</h1>
+    <h1>UK Golf Directory</h1>
+    <a href="index.html">← Back to all courses</a>
   </header>
+
   <main>
-    <img id="course-image" alt="Course Image" style="max-width: 600px; width: 100%; border-radius: 8px;">
-    <p id="course-location"></p>
-    <p id="course-par"></p>
-    <p id="course-bestScore"></p>
-    <a href="index.html">⬅ Back to Courses</a>
+    <section id="course-details">
+      <!-- JS will fill this section -->
+    </section>
+
+    <section>
+      <h2>Course Location</h2>
+      <div id="course-map" style="height: 400px; border-radius: 8px;"></div>
+    </section>
   </main>
 
-  <script src="details.js"></script>
+  <footer>
+    <p>&copy; 2025 UK Golf Directory</p>
+  </footer>
+
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="script.js"></script>
+  <script>
+    // Get course ID from URL
+    const params = new URLSearchParams(window.location.search);
+    const courseId = params.get('id');
+    const course = courses[courseId];
+
+    if (course) {
+      const detailsDiv = document.getElementById('course-details');
+      detailsDiv.innerHTML = `
+        <h2>${course.name}</h2>
+        <img src="${course.image}" alt="${course.name}" style="max-width:100%; border-radius:8px;">
+        <p><strong>Location:</strong> ${course.location}</p>
+        <p><strong>Par:</strong> ${course.par}</p>
+        <p><strong>Best Score:</strong> ${course.bestScore}</p>
+      `;
+
+      // Show map centered on this course
+      const map = L.map('course-map').setView([course.lat, course.lng], 13);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap'
+      }).addTo(map);
+      L.marker([course.lat, course.lng]).addTo(map)
+        .bindPopup(course.name)
+        .openPopup();
+    } else {
+      document.getElementById('course-details').innerHTML = '<p>Course not found.</p>';
+    }
+  </script>
 </body>
 </html>
