--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UK Golf Directory</title>
   <link rel="stylesheet" href="styles.css">
-
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 </head>
 <body>
-  <!-- Header / Hero -->
   <header class="hero">
     <div class="hero-text">
       <h1>UK Golf Directory</h1>
@@ -18,7 +15,6 @@
     </div>
   </header>
 
-  <!-- Main content -->
   <main>
     <section class="map-section">
       <h2>Interactive Map</h2>
@@ -27,19 +23,15 @@
 
     <section class="courses-section">
       <h2>Featured Courses</h2>
-      <div id="course-cards" class="course-grid">
-        <!-- JS will fill this -->
-      </div>
+      <div id="course-cards" class="course-grid"></div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 UK Golf Directory | All Rights Reserved</p>
     <p><a href="mailto:info@ukgolfdirectory.co.uk">Contact Us</a></p>
   </footer>
 
-  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="script.js"></script>
 </body>
