--- a/course.html
+++ b/course.html
@@ -4,62 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Course Details - UK Golf Directory</title>
-  <link rel="stylesheet" href="styles.css">
-
-  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
-  <header>
-    <h1>UK Golf Directory</h1>
-    <a href="index.html">← Back to all courses</a>
-  </header>
 
-  <main>
-    <section id="course-details">
-      <!-- JS will fill this section -->
-    </section>
+<header>
+  <h1 id="course-name">Course Name</h1>
+  <p id="course-location">Location</p>
+</header>
 
-    <section>
-      <h2>Course Location</h2>
-      <div id="course-map" style="height: 400px; border-radius: 8px;"></div>
-    </section>
-  </main>
+<!-- Course Image -->
+<section id="course-image">
+  <img id="course-img" src="" alt="Course Image" style="width:100%; max-height:400px; object-fit:cover; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.1); margin:2rem 0;">
+</section>
 
-  <footer>
-    <p>&copy; 2025 UK Golf Directory</p>
-  </footer>
+<!-- Map -->
+<section id="course-map" style="height:400px; margin:2rem 0; border-radius:12px; overflow:hidden;"></section>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="script.js"></script>
-  <script>
-    // Get course ID from URL
-    const params = new URLSearchParams(window.location.search);
-    const courseId = params.get('id');
-    const course = courses[courseId];
-
-    if (course) {
-      const detailsDiv = document.getElementById('course-details');
-      detailsDiv.innerHTML = `
-        <h2>${course.name}</h2>
-        <img src="${course.image}" alt="${course.name}" style="max-width:100%; border-radius:8px;">
-        <p><strong>Location:</strong> ${course.location}</p>
-        <p><strong>Par:</strong> ${course.par}</p>
-        <p><strong>Best Score:</strong> ${course.bestScore}</p>
-      `;
-
-      // Show map centered on this course
-      const map = L.map('course-map').setView([course.lat, course.lng], 13);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '© OpenStreetMap'
-      }).addTo(map);
-      L.marker([course.lat, course.lng]).addTo(map)
-        .bindPopup(course.name)
-        .openPopup();
-    } else {
-      document.getElementById('course-details').innerHTML = '<p>Course not found.</p>';
-    }
-  </script>
-</body>
-</html>
+<!-- Course Info -->
+<section id="course-info" style="max-width:800px; margin:0 auto 4rem auto; padding:0 1rem;">
+  <h2>About the Course</h2>
+  <p id="course-description">
+    This is a placeholder description for t
