--- a/index.html
+++ b/index.html
@@ -1,101 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UK Golf Directory</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>UK Golf Directory – Find UK Golf Courses</title>
+  <meta name="description" content="Explore UK golf courses with interactive map, filters by county, par, length and more.">
+  <link rel="preconnect" href="https://unpkg.com">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="site-header">
-    <div class="container nav">
-      <div class="brand">UK Golf Directory</div>
-      <nav>
-        <a href="#home">Home</a>
+    <div class="container header-inner">
+      <div class="brand">
+        <a href="index.html" class="logo">UK Golf Directory</a>
+        <p class="tagline">The smarter way to find UK golf courses</p>
+      </div>
+      <nav class="top-nav">
         <a href="#map">Map</a>
-        <a href="#courses">Courses</a>
-        <a href="#about">About</a>
+        <a href="#directory">Directory</a>
+        <a href="#featured">Featured</a>
+        <a href="#guides">Guides</a>
       </nav>
     </div>
   </header>
 
-  <section class="hero" id="home" aria-label="Hero">
-    <div class="hero-inner container">
-      <h1>Discover the Best Golf Courses Across the UK</h1>
-      <p>Explore our interactive map and beautiful course profiles.</p>
-      <a class="btn" href="#map">View the Map</a>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container">
+      <h1>Discover golf courses across the UK</h1>
+      <p>Search by county, par, length, and difficulty — then dive into rich course pages with maps, fees, and flyover videos.</p>
     </div>
   </section>
 
-  <main class="container">
-    <section id="map-section">
-      <h2 id="map">Interactive Map</h2>
-      <div id="mapEl" role="region" aria-label="Map of UK golf courses"></div>
-    </section>
+  <!-- Ad slot (leaderboard) -->
+  <div class="container">
+    <div class="ad ad-leaderboard" id="ad-home-top">
+      <!-- Google AdSense goes here later -->
+      <span>Ad space – 728×90</span>
+    </div>
+  </div>
 
-    <section id="courses-section">
-      <h2 id="courses">Featured Courses</h2>
-      <div id="coursesGrid" class="grid"></div>
-    </section>
-  </main>
+  <!-- Map + Filters -->
+  <section class="container layout-split" id="map">
+    <div class="panel">
+      <h2>Interactive Map</h2>
+      <div id="mapView" class="map"></div>
+      <div class="ad ad-map" id="ad-home-map">
+        <span>Ad space – 300×250</span>
+      </div>
+    </div>
 
-  <footer class="site-footer" id="about">
+    <aside class="panel filters">
+      <h2>Filters</h2>
+      <label>
+        Search (name / county)
+        <input id="q" type="search" placeholder="e.g. St Andrews or Surrey">
+      </label>
+
+      <label>
+        County
+        <select id="countySelect">
+          <option value="">Any county</option>
+        </select>
+      </label>
+
+      <label>
+        Type
+        <select id="typeSelect">
+          <option value="">Any type</option>
+          <option>Links</option>
+          <option>Parkland</option>
+          <option>Heathland</option>
+          <option>Downland</option>
+          <option>Inland Links</option>
+        </select>
+      </label>
+
+      <div class="grid-2">
+        <label>
+          Par (min)
+          <input id="parMin" type="number" min="60" max="80" step="1" placeholder="60">
+        </label>
+        <label>
+          Par (max)
+          <input id="parMax" type="number" min="60" max="80" step="1" placeholder="80">
+        </label>
+      </div>
+
+      <div class="grid-2">
+        <label>
+          Length min (yds)
+          <input id="lenMin" type="number" min="4000" max="8000" step="100" placeholder="5500">
+        </label>
+        <label>
+          Length max (yds)
+          <input id="lenMax" type="number" min="4000" max="8000" step="100" placeholder="7800">
+        </label>
+      </div>
+
+      <label>
+        Difficulty
+        <select id="difficultySelect">
+          <option value="">Any</option>
+          <option value="1">1 – Easiest</option>
+          <option value="2">2</option>
+          <option value="3">3 – Medium</option>
+          <option value="4">4</option>
+          <option value="5">5 – Hardest</option>
+        </select>
+      </label>
+
+      <button id="resetBtn" class="btn-secondary">Reset filters</button>
+    </aside>
+  </section>
+
+  <!-- Directory -->
+  <section class="container" id="directory">
+    <div class="section-head">
+      <h2>Course Directory</h2>
+      <p id="resultsCount">Loading courses…</p>
+    </div>
+    <div id="courseGrid" class="card-grid"></div>
+  </section>
+
+  <!-- Featured with YouTube -->
+  <section class="container" id="featured">
+    <div class="section-head">
+      <h2>Featured Courses – Flyover Videos</h2>
+      <p>Watch hole-by-hole flyovers from ten iconic UK courses.</p>
+    </div>
+    <div id="featuredGrid" class="featured-grid"></div>
+  </section>
+
+  <!-- Guides / unique content for SEO -->
+  <section class="container" id="guides">
+    <div class="section-head">
+      <h2>Guides & Rankings</h2>
+      <p>Hand-picked lists to help you plan your next round.</p>
+    </div>
+    <div class="card-grid guides-grid">
+      <article class="card guide">
+        <h3>Top 10 Golf Courses in Scotland</h3>
+        <p>Our editorial picks based on architecture, conditioning, and fun factor.</p>
+        <a href="guide-scotland-top10.html" class="btn">Read the list</a>
+      </article>
+      <article class="card guide">
+        <h3>Best UK Links Courses for Beginners</h3>
+        <p>Gentler links to learn the wind and turf without the pain.</p>
+        <a href="guide-links-beginners.html" class="btn">Read the guide</a>
+      </article>
+    </div>
+  </section>
+
+  <footer class="site-footer">
     <div class="container footer-inner">
       <div>
-        <h3>About</h3>
-        <p>The UK Golf Directory is a simple, elegant way to browse top UK courses with an interactive map. More courses coming soon.</p>
+        <strong>UK Golf Directory</strong><br>
+        © 2025 • All rights reserved
       </div>
-      <div>
-        <h3>Contact</h3>
-        <p>General enquiries: info@ukgolfdirectory.co.uk (placeholder)</p>
-      </div>
-      <div>
-        <h3>Legal</h3>
-        <p>&copy; 2025 UK Golf Directory. All rights reserved.</p>
-      </div>
+      <nav class="footer-nav">
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Privacy</a>
+      </nav>
     </div>
   </footer>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="script.js"></script>
-</body>
-</html>
-<!-- HEADER AD (desktop only) -->
-<div class="ad ad-header">
-  <p>Advertisement</p>
-  <div class="ad-box">728x90 Banner</div>
-</div>
-
-<section class="hero" id="home" aria-label="Hero">
-  ...
-</section>
-
-<main class="container with-sidebar">
-  <section id="map-section">
-    <h2 id="map">Interactive Map</h2>
-    <div id="mapEl"></div>
-  </section>
-
-  <aside class="ad ad-sidebar">
-    <p>Advertisement</p>
-    <div class="ad-box">300x250 Ad</div>
-  </aside>
-
-  <section id="courses-section">
-    <h2 id="courses">Featured Courses</h2>
-    <!-- Example inline ad card -->
-    <article class="card ad-card">
-      <div class="card-body">
-        <p><strong>Advertisement</strong></p>
-        <div class="ad-box">Responsive Ad Slot</div>
-      </div>
-    </article>
-    <div id="coursesGrid" class="grid"></div>
-  </section>
-</main>
-
-<!-- FOOTER AD (mobile sticky) -->
-<div class="ad ad-footer">
-  <div class="ad-box">320x50 Mobile Banner</div>
-</div>
+  <script src="https
