--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section class="featured-videos">
     <h2>Flyover Videos</h2>
     <div class="video-grid">
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+      <iframe src="https://www.youtube.com/embed/6x3UuTgs4pI" 
         title="St Andrews Flyover" frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
