--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section class="featured-videos">
     <h2>Flyover Videos</h2>
     <div class="video-grid">
-      <iframe src="https://www.youtube.com/embed/GE5tY4lnYrI" title="St Andrews Flyover" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/6x3UuTgs4pI" title="St Andrews Flyover" frameborder="0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/HEeypVgIqxA" title="Royal Birkdale Flyover" frameborder="0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/_4DE1IHW7nQ" title="Royal Portrush Flyover" frameborder="0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/u1YhK4w3A18" title="Celtic Manor Flyover" frameborder="0" allowfullscreen></iframe>
